# desktop.cc

./: .gitignore  .gitreview  CMakeLists.txt  README.md  docs.pri  mfds.pri  mfds.pro  mfds_data.pri  mfds_ide_branding.pri
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/coreplugin/: Core.json.in  basefilewizardfactory.cpp  basefilewizardfactory.h  core.qrc  coreconstants.h  coreicons.cpp  coreicons.h  corejsextensions.cpp  corejsextensions.h  coreplugin.cpp  coreplugin.h  coreplugin.pro  coreplugin_dependencies.pri  designmode.cpp  documentmanager.cpp  documentmanager.h  editortoolbar.cpp  fancyactionbar.cpp  fancyactionbar.qrc  fancytabwidget.cpp  fancytabwidget.h  fileiconprovider.cpp  fileutils.cpp  fileutils.h  generalsettings.cpp  generatedfile.cpp  generatedfile.h  helpitem.cpp  homemode.cpp  homemode.h  icontext.cpp  icontext.h  icore.cpp  icore.h  idocument.cpp  idocument.h  idocumentfactory.cpp  idocumentfactory.h  ioutputpane.h  iwelcomepage.cpp  (+34 more)
src/plugins/helloworld/: HelloWorld.json.in  helloworld.pro  helloworldplugin.cpp  helloworldplugin.h  helloworldwindow.cpp  helloworldwindow.h
src/plugins/imageviewer/: ImageViewer.json.in  exportdialog.cpp  exportdialog.h  imageview.cpp  imageview.h  imageviewer.cpp  imageviewer.h  imageviewer.pro  imageviewer_dependencies.pri  imageviewerconstants.h  imageviewerfactory.cpp  imageviewerfactory.h  imageviewerfile.cpp  imageviewerfile.h  imageviewerplugin.cpp  imageviewerplugin.h  multiexportdialog.cpp  multiexportdialog.h
src/plugins/projectexplorer/: ProjectExplorer.json.in  foldernavigationwidget.cpp  (+13 more)
(+322 files in other folders)
